# PaperLens

./: .gitignore  README.md  pnpm-lock.yaml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routes/: chat.py  library.py  paper.py  summary.py  upload.py
backend/app/models/: chat.py  paper.py
backend/app/schemas/: upload.py
backend/app/services/llm/: chat.py  client.py  summarizer.py
backend/app/services/pdf/: cleaner.py  metadata_extractor.py  parser.py  section_extractor.py
backend/app/services/rag/: chunker.py  embedder.py  vector_store.py
backend/app/services/storage/: storage.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  loading.tsx  page.tsx
frontend/app/paper/[paperId]/: loading.tsx  page.tsx
frontend/components/chat/: ChatBox.tsx
frontend/components/layout/: Navbar.tsx
frontend/components/paper/: PDFViewer.tsx  PaperViewer.tsx  SectionCard.tsx  SummaryPanel.tsx  WorkspaceTabs.tsx
frontend/components/upload/: UploadCard.tsx
frontend/lib/: api.ts  config.ts
frontend/types/: api.ts
